# econ_rpg

./: .gitignore  CMakeLists.txt  readme.md
doc/: legal.md  readme.md
doc/project/: backlog.md  charter.md  readme.md
src/: readme.md
src/base/: CMakeLists.txt  base.c  base.h
src/client/: CMakeLists.txt  client.c
src/client/menu/: menu.c  menu.h
src/client/play/: play.c  play.h
src/editor/: CMakeLists.txt  editor.c
src/engine/: CMakeLists.txt  engine.c  engine.h
src/engine/core/: app.c  app.h  config.c  config.h
src/engine/kernel/: kernel.c  kernel.h
src/engine/kernel/console/: console.c  console.h
src/engine/kernel/fs/: assets.c  assets.h
src/engine/kernel/input/: input.c  input.h
src/engine/kernel/visual/: camera.c  camera.h  font.c  font.h  graphics_api.h  material.c  material.h  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h  uniform.c  uniform.h  visual.c  visual.h
src/engine/kernel/visual/apis/: graphics_api.h  opengl.c  opengl.h  vulkan.c  vulkan.h
src/engine/kernel/visual/gl/: gl_mesh.c  gl_mesh.h  gl_shader.c  gl_shader.h  gl_texture.c  gl_texture.h  gl_uniform.c  gl_uniform.h  opengl.c  opengl.h
src/engine/kernel/visual/vulkan/: vulkan.h
src/engine/kernel/window/: window.c  window.h
src/engine/util/: coords.c  coords.h  error.h  location.c  location.h  swizzle.h
